Violationcontroller
- getviolaitonbyid
- getallviolaiton
- updateviolationbyid
